endpoint case swagger
