# cmd/server/v1/handler/endpoint-case.go
@@ -13,7 +13,16 @@ type EndpointCaseCtrl struct {
 	EndpointCaseService *service.EndpointCaseService `inject:""`
 }
 
-// Load
+// List
+// @Tags	接口用例
+// @summary	用例列表
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization	header	string	true	"Authentication header"
+// @Param 	currProjectId	query	int		true	"当前项目ID"
+// @Param 	endpointId		query	int		true	"endpointId"
+// @success	200	{object}	_domain.Response{data=[]model.EndpointCase}
+// @Router	/api/v1/endpoints/cases/list	[get]
 func (c *EndpointCaseCtrl) List(ctx iris.Context) {
 	endpointId, _ := ctx.URLParamInt("endpointId")
 
@@ -27,6 +36,15 @@ func (c *EndpointCaseCtrl) List(ctx iris.Context) {
 }
 
 // Get
+// @Tags	接口用例
+// @summary	用例详情
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization	header	string	true	"Authentication header"
+// @Param 	currProjectId	query	int		true	"当前项目ID"
+// @Param 	id		path	int		true	"用例ID"
+// @success	200	{object}	_domain.Response{data=model.EndpointCase}
+// @Router	/api/v1/endpoints/cases/{id}	[get]
 func (c *EndpointCaseCtrl) Get(ctx iris.Context) {
 	id, _ := ctx.Params().GetInt("id")
 
@@ -40,6 +58,16 @@ func (c *EndpointCaseCtrl) Get(ctx iris.Context) {
 }
 
 // Save
+// @Tags	接口用例
+// @summary	保存用例
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization			header	string								true	"Authentication header"
+// @Param 	currProjectId			query	int									true	"当前项目ID"
+// @Param 	id						path	int									true	"用例ID"
+// @Param 	EndpointCaseSaveReq		body	serverDomain.EndpointCaseSaveReq	true	"保存用例的请求参数"
+// @success	200	{object}	_domain.Response{data=[]model.EndpointCase}
+// @Router	/api/v1/endpoints/cases/{id}	[post]
 func (c *EndpointCaseCtrl) Save(ctx iris.Context) {
 	req := serverDomain.EndpointCaseSaveReq{}
 	err := ctx.ReadJSON(&req)
@@ -66,7 +94,17 @@ func (c *EndpointCaseCtrl) Save(ctx iris.Context) {
 	ctx.JSON(_domain.Response{Code: _domain.NoErr.Code, Data: data})
 }
 
-// Save
+// UpdateName
+// @Tags	接口用例
+// @summary	保存用例名称
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization			header	string								true	"Authentication header"
+// @Param 	currProjectId			query	int									true	"当前项目ID"
+// @Param 	id						path	int									true	"用例ID"
+// @Param 	EndpointCaseSaveReq		body	serverDomain.EndpointCaseSaveReq	true	"保存用例名称的请求参数"
+// @success	200	{object}	_domain.Response{data=[]model.EndpointCase}
+// @Router	/api/v1/endpoints/cases/{id}	[put]
 func (c *EndpointCaseCtrl) UpdateName(ctx iris.Context) {
 	req := serverDomain.EndpointCaseSaveReq{}
 	err := ctx.ReadJSON(&req)
@@ -91,6 +129,15 @@ func (c *EndpointCaseCtrl) UpdateName(ctx iris.Context) {
 }
 
 // SaveDebugData
+// @Tags	接口用例
+// @summary	保存调试数据
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization	header	string				true	"Authentication header"
+// @Param 	currProjectId	query	int					true	"当前项目ID"
+// @Param 	DebugData		body	domain.DebugData	true	"保存调试数据的请求参数"
+// @success	200	{object}	_domain.Response{data=[]model.EndpointCase}
+// @Router	/api/v1/endpoints/cases/saveDebugData	[post]
 func (c *EndpointCaseCtrl) SaveDebugData(ctx iris.Context) {
 	req := domain.DebugData{}
 	err := ctx.ReadJSON(&req)
@@ -114,6 +161,17 @@ func (c *EndpointCaseCtrl) SaveDebugData(ctx iris.Context) {
 	ctx.JSON(_domain.Response{Code: _domain.NoErr.Code, Data: data})
 }
 
+// Remove
+// @Tags	接口用例
+// @summary	删除用例
+// @accept 	application/json
+// @Produce application/json
+// @Param	Authorization			header	string								true	"Authentication header"
+// @Param 	currProjectId			query	int									true	"当前项目ID"
+// @Param 	id						path	int									true	"用例ID"
+// @Param 	EndpointCaseSaveReq		body	serverDomain.EndpointCaseSaveReq	true	"删除用例的请求参数"
+// @success	200	{object}	_domain.Response
+// @Router	/api/v1/endpoints/cases/{id}	[delete]
 func (c *EndpointCaseCtrl) Remove(ctx iris.Context) {
 	id, _ := ctx.Params().GetInt("id")
 
